Actualización de footer con íconos y estilos responsive

--- a/index.html
+++ b/index.html
@@ -62,10 +62,19 @@
           </form>
           </section>
     </main>  
-    <footer>
-      <h2>Derechos reservados</h2>
-      <img class='instagram' src= "./img/ig.png" alt='Instagram'>
-      <img class='letterboxd' src="./img/letterboxd.png" alt='Letterboxd'> 
-  </footer>
+<footer>
+  <h2>Derechos reservados</h2>
+  <div class="social-icons">
+    <a href="https://www.instagram.com/botica.del.mierdomancer" target="_blank">
+      <img class="instagram" src="./img/ig.png" alt="Instagram">
+    </a>
+    <a href="https://letterboxd.com/BelLugox/" target="_blank">
+      <img class="letterboxd" src="./img/letterboxd.png" alt="Letterboxd">
+    </a>
+    <a href="https://www.twitch.tv/laboticadelmierdomancer" target="_blank">
+      <img class="twitch" src="./img/twitch.png" alt="Twitch">
+    </a>
+  </div>
+</footer>
 
 </body>
