--- a/pages/acercademi.html
+++ b/pages/acercademi.html
@@ -32,10 +32,19 @@
             hago un podcast tambien con una gran amiga mia y hoy los invito a mi primer sitio web. Espero que lo disfruten.
         </p>
     </main>
-    <footer>
-        <h2>Derechos reservados</h2>
-        <img class='instagram' src= "../img/ig.png" alt='Instagram'>
-        <img class='letterboxd' src="../img/letterboxd.png" alt='Letterboxd'> 
-    </footer>
+<footer>
+<h2>Derechos reservados</h2>
+<div class="social-icons">
+    <a href="https://www.instagram.com/botica.del.mierdomancer" target="_blank">
+    <img class="instagram" src="../img/ig.png" alt="Instagram">
+    </a>
+    <a href="https://letterboxd.com/BelLugox/" target="_blank">
+    <img class="letterboxd" src="../img/letterboxd.png" alt="Letterboxd">
+    </a>
+    <a href="https://www.twitch.tv/laboticadelmierdomancer" target="_blank">
+    <img class="twitch" src="../img/twitch.png" alt="Twitch">
+    </a>
+</div>
+</footer>
 </body>
 </html>
