mejoras en html recomendada

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Botica del Mierdomancer - Contacto</title>
+    <title>Contacto</title>
     <link rel="stylesheet" href="../styles/estilos.css">
 </head>
 <body>
     <header>
         <a href="../index.html">
-            <img src="../img/Logo 2.png" alt="Logo" style="width: 1000px; height: auto;">
+            <img class="logo" src="../img/Logo 2.png" alt="Logo">
         </a>
         <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="acercademi.html">Acerca de Mi</a></li>
-                <li><a href="favorita2024.html">Favorita 2024 </a></li>
-                <li><a href="recomendadas.html">Recomendadas</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+        <ul class="menu">
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./acercademi.html">Acerca de Mi</a></li>
+            <li><a href="./favorita2024.html">Favorita 2024</a></li>
+            <li><a href="./recomendadas.html">Recomendadas</a></li>
+            <li><a href="./reviews.html">Reviews</a></li>
+            <li><a href="./contacto.html">Contacto</a></li>
+        </ul>
         </nav>
     </header>
     
