--- a/pages/recomendadas.html
+++ b/pages/recomendadas.html
@@ -1,45 +1,148 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Botica del Mierdomancer - Recomendadas</title>
-    <link rel="stylesheet" href="../styles/estilos.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Películas Recomendadas</title>
+<link rel="stylesheet" href="../styles/estilos.css">
 </head>
 <body>
-    <link rel="stylesheet" href="../estilos.css">
-    <header>
-        <a href="../index.html">
-            <img src="../img/Logo 2.png" alt="Logo" style="width: 1000px; height: auto;">
-        </a>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="acercademi.html">Acerca de Mi</a></li>
-                <li><a href="favorita2024.html">Favorita 2024 </a></li>
-                <li><a href="recomendadas.html">Recomendadas</a></li>
-                <li><a href="reviews.html">Reviews</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
-        </nav>
-    </header>
-    
-    <main>
-        <h1>Recomendadas</h1>
-    </main>
-    <footer>
-<h2>Derechos reservados</h2>
-<div class="social-icons">
+<header>
+    <a href="../index.html">
+    <img class="logo" src="../img/Logo 2.png" alt="Logo">
+    </a>
+    <nav>
+    <ul class="menu">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="./acercademi.html">Acerca de Mi</a></li>
+        <li><a href="./favorita2024.html">Favorita 2024</a></li>
+        <li><a href="./recomendadas.html">Recomendadas</a></li>
+        <li><a href="./reviews.html">Reviews</a></li>
+        <li><a href="./contacto.html">Contacto</a></li>
+    </ul>
+    </nav>
+</header>
+
+<main>
+    <h1>Recomendadas</h1>
+    <div class="galeria-container">
+    <section class="galeria">
+
+        <div class="pelicula">
+        <img src="../img/theevildead.png" alt="Evil Dead">
+        <div class="info">
+            <h3>Evil Dead</h3>
+            <p>1981 · Sam Raimi</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/deadandburied.png" alt="Dead and Buried">
+        <div class="info">
+            <h3>Dead & Buried</h3>
+            <p>1981 · Gary Sherman</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/deliverusfromevil.png" alt="Deliver Us From Evil">
+        <div class="info">
+            <h3>Deliver Us From Evil</h3>
+            <p>2014 · Scott Derrickson</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/fridaythe13th.png" alt="Friday the 13th">
+        <div class="info">
+            <h3>Friday the 13th</h3>
+            <p>1980 · Sean S. Cunningham</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/halloween.png" alt="Halloween">
+        <div class="info">
+            <h3>Halloween</h3>
+            <p>1978 · John Carpenter</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/lettherightonein.png" alt="Let the Right One In">
+        <div class="info">
+            <h3>Let the Right One In</h3>
+            <p>2008 · Tomas Alfredson</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/pearl.png" alt="Pearl">
+        <div class="info">
+            <h3>Pearl</h3>
+            <p>2022 · Ti West</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/possession.png" alt="Possession">
+        <div class="info">
+            <h3>Possession</h3>
+            <p>1981 · Andrzej Żuławski</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/profondorosso.png" alt="Profondo Rosso">
+        <div class="info">
+            <h3>Profondo Rosso</h3>
+            <p>1975 · Dario Argento</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/sinister.png" alt="Sinister">
+        <div class="info">
+            <h3>Sinister</h3>
+            <p>2012 · Scott Derrickson</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/suspiria.png" alt="Suspiria">
+        <div class="info">
+            <h3>Suspiria</h3>
+            <p>1977 · Dario Argento</p>
+        </div>
+        </div>
+
+        <div class="pelicula">
+        <img src="../img/The_Brood.png" alt="The Brood">
+        <div class="info">
+            <h3>The Brood</h3>
+            <p>1979 · David Cronenberg</p>
+        </div>
+        </div>
+
+        
+
+    </section>
+    </div>
+</main>
+
+<footer>
+    <h2>Derechos reservados</h2>
+    <div class="social-icons">
     <a href="https://www.instagram.com/botica.del.mierdomancer" target="_blank">
-    <img class="instagram" src="../img/ig.png" alt="Instagram">
+        <img class="instagram" src="../img/ig.png" alt="Instagram">
     </a>
     <a href="https://letterboxd.com/BelLugox/" target="_blank">
-    <img class="letterboxd" src="../img/letterboxd.png" alt="Letterboxd">
+        <img class="letterboxd" src="../img/letterboxd.png" alt="Letterboxd">
     </a>
     <a href="https://www.twitch.tv/laboticadelmierdomancer" target="_blank">
-    <img class="twitch" src="../img/twitch.png" alt="Twitch">
+        <img class="twitch" src="../img/twitch.png" alt="Twitch">
     </a>
-</div>
+    </div>
 </footer>
 </body>
 </html>
