Terminamos de agregar contenido, y mejoramos detalles

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </button>
 </div>
 </section>
-
+<main>
   <form class="formulario">
     <div>
       <label for="nombre">Nombre</label>
@@ -107,7 +107,7 @@
     <button type="submit">Recomendar</button>
   </form>
   </div>
-
+</main>
     <footer>
       <h2>Derechos reservados</h2>
       <div class="social-icons">
