--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,6 +25,16 @@
     
     <main>
         <h1>Contacto</h1>
+        <section class="form-section">
+<section>
+<p class="agradecimiento">
+    ¡Gracias por visitar mi sitio dedicado al cine de terror! 🕯️<br>
+    Si querés recomendarme una película, escribirme una opinión o participar de alguna forma en este proyecto, estás más que invitado/a.  
+    <br><br>
+    Podés contactarme por mail a: <a href="mailto:cristina.horror@gmail.com">cristina.horror@gmail.com</a><br>
+    O por WhatsApp: <a href="https://wa.me/5491123456789" target="_blank">+54 9 11 2345 6789</a>
+</p>
+</section>
     </main>
 <footer>
 <h2>Derechos reservados</h2>
