--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -23,8 +23,109 @@
         </nav>
     </header>
     
-    <main>
-        <h1>Reviews</h1>
+<main>
+<h1>Reviews</h1>
+<section class="reviews-container">
+    
+    <article class="review">
+    <img src="../img/coffee table.png" alt="Coffee Table">
+    <div class="review-content">
+        <h3>~ La Mesita del Comedor, 2022 ~</h3>
+        <p>Dirigida por Caye Casas. Este thriller negro se centra en Jesús y María, una pareja que, tras el nacimiento de su hijo, atraviesa una crisis matrimonial. La compra de una mesita para el comedor desencadena una serie de eventos trágicos e inesperados que alteran sus vidas por completo. La película ha combinado humor negro y elementos de terror, ofreciendo una experiencia cinematográfica intensa y provocadora. Bastanta incomoda por momentos.</p>
+        <span class="puntuacion">★ ★ ★ ★ ☆</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/cuckoo.png" alt="Cuckoo">
+    <div class="review-content">
+        <h3>~ Cuckoo, 2024 ~</h3>
+        <p>Dirigida por Tilman Singer, es un thriller/terror que sigue a una joven que se muda a una nueva ciudad con su familia, solo para descubrir que algo extraño y aterrador acecha en su nuevo hogar. A medida que investiga, se encuentra atrapada en un misterio inquietante que desafía la realidad y amenaza su seguridad.</p>
+        <span class="puntuacion">★ ★ ★ ☆ ☆</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/ex huma.png" alt="Ex Huma">
+    <div class="review-content">
+        <h3>~Exhuma, 2024~</h3>
+        <p>Es una película surcoreana de 2024 escrita y dirigida por Jang Jae-hyun.
+        La trama sigue a Hwa-rim, una joven chamana, y su compañero Bong-gil, quienes son contratados por una adinerada familia para investigar una misteriosa enfermedad que afecta a su hijo recién nacido. Junto con un experto en feng shui y un sepulturero, descubren que la causa radica en la tumba de un antepasado.
+        La película combina elementos de terror y thriller sobrenatural, explorando temas relacionados con prácticas chamánicas y creencias tradicionales coreanas. </p>
+        <span class="puntuacion">★ ★ ★ ☆ ☆</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/incantation.png" alt="Incantation">
+    <div class="review-content">
+        <h3>~ Incantation, 2022 ~</h3>
+        <p>Es una película de terror taiwanesa dirigida por Kevin Ko. Presentada en formato de found footage, sigue a una madre que intenta proteger a su hija de una maldición que desató años atrás tras violar un tabú religioso. Destaca por su atmósfera inquietante, su narrativa no lineal y su uso del folclore taiwanés, logrando un terror psicológico efectivo.
+        Debe verla bajo su propio riesgo.</p>
+        <span class="puntuacion">★ ★ ★ ☆ ☆</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/lights out.png" alt="Lights out">
+    <div class="review-content">
+        <h3>~ Lights Out, 2016 ~</h3>
+        <p>Dirigida por David F. Sandberg, es un efectivo thriller de terror que explota muy bien el miedo a la oscuridad. Basada en su propio corto viral, la película presenta una entidad que solo aparece cuando las luces se apagan, creando una tensión constante. Sin embargo, la trama es bastante cliché, y aunque la premisa es interesante, siento que la resolución llega demasiado rápido y la segunda mitad de la película se alarga innecesariamente. A pesar de esto, logra generar varios momentos de suspenso genuino sin recurrir al exceso de sustos fáciles. Una propuesta simple, pero efectiva dentro del género, que podría haber sido más breve y concisa.</p>
+        <span class="puntuacion">★ ★ ☆ ☆ ☆</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/mades.png" alt="M4ds">
+    <div class="review-content">
+        <h3>~Mads, 2024~</h3>
+        <p>Dirigida por David Moreau. La historia sigue a Romain, un joven de 18 años que prueba una droga experimental y recoge a una misteriosa mujer herida en la carretera. Lo que parecía una simple decisión desencadena una noche llena de terror y alucinaciones donde nada es lo que parece.
+        La película destaca por su atmósfera inquietante y su tensión creciente, con una narrativa que mantiene al espectador en suspenso hasta el final. Mantengo firme mi opinion de que es una pelicula que se disfruta el estres. No hay un solo corte de camara, y si lo hubiese, yo no lo pude encontrar. ESTAREMOS FRENTE A LA MEJOR PELICULA DE ESTE 2024? Uds lo deciden.</p>
+        <span class="puntuacion">★ ★ ★ ★ ★</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/suitable flesh.png" alt="suitableflesh">
+    <div class="review-content">
+        <h3>~ Suitable Flesh, 2023 ~</h3>
+        <p>Dirigida por Joe Lynch e inspirada en The Thing on the Doorstep de Lovecraft, Suitable Flesh se toma libertades con el material original, pero ofrece una experiencia visualmente atrapante. Aunque se aleja del tono más denso del autor, resulta entretenida gracias a sus sólidas actuaciones y una fotografía que realza el ambiente oscuro y sensual del film. Una mezcla de horror psicológico, erotismo y estética retro que la vuelve ideal para quienes buscan algo diferente dentro del género.</p>
+        <span class="puntuacion">★ ★ ☆ ☆ ☆</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/odditty.png" alt="Oddity">
+    <div class="review-content">
+        <h3>~ Oddity, 2024 ~</h3>
+        <p>Dirigida por Damian Mc Carthy, es un thriller de horror sobrenatural ambientado en la Irlanda rural. La historia sigue a Darcy, una mujer ciega que regresa a la casa de su hermana fallecida, Dani, un año después de su misteriosa muerte. El viudo Ted, ahora vive allí con su nueva novia. Darcy no solo busca hacer duelo, sino también descubrir la verdad detrás de la muerte de su hermana. Se destaca por crear una atmósfera tensa y perturbadora, especialmente a través de su diseño sonoro inquietante y el uso del silencio. La casa en la que ocurre la trama se siente como un personaje más, llena de secretos y amenazas ocultas. Aunque gran parte de la narrativa gira en torno al duelo y la traición, y un trasfondo siniestro, agregan una capa extra de horror. Sin embargo, algunos giros en la trama pueden parecer predecibles, y el ritmo de la película deja ciertas partes poco desarrolladas.</p>
+        <span class="puntuacion">★ ★ ★ ★ ☆</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/peopleunderthestairs.png" alt="people under the stairs">
+    <div class="review-content">
+        <h3>~ The People under the Stairs, 1991 ~</h3>
+        <p>Pelicula dirigida, nada mas ni nada menos, que por el gran y legendario Wes Craven.
+        La misma cuenta la historia de Fool, un niño que, sintiendo la obligacion de ayudar a su familia entra a robar a la casa de sus arrendatarios. Esta decision lo lleva a descubrir los secretos que ocultan las personas que habitan alli.
+        Un caso mas para demostrar que Wes Craven sabe lo que hace.</p>
+        <span class="puntuacion">★ ★ ★ ☆ ☆</span>
+    </div>
+    </article>
+
+    <article class="review">
+    <img src="../img/the void.png" alt="Thevoid">
+    <div class="review-content">
+        <h3>~ The Void, 2016 ~</h3>
+        <p>Escrita y dirigida por Steven Kostanski y Jeremy Gillespie. Es una de esas joyitas del terror cósmico con vibes bien Lovecraftianas.
+        Una pesadilla cósmica que mezcla body horror, sectas misteriosas y criaturas grotescas al mejor estilo John Carpenter. Con efectos prácticos que rinden homenaje a los clásicos de los 80, esta película no se preocupa por explicarlo todo, sino por arrastrarte directo al abismo. Ideal para fans del horror oscuro y surreal.
+</p>
+        <span class="puntuacion">★ ★ ★ ☆ ☆</span>
+    </div>
+    </article>
+
+</section>
     </main>
 <footer>
 <h2>Derechos reservados</h2>
