ingreso de scss

--- a/pages/recomendadas.html
+++ b/pages/recomendadas.html
@@ -25,6 +25,7 @@
 
 <main>
     <h1>Recomendadas</h1>
+    <h2 class="subtitulo">12 Joyas recomendadas por Bela</h2>
     <div class="galeria-container">
     <section class="galeria">
 
