--- a/pages/reviews.html
+++ b/pages/reviews.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reviews</title>
     <link rel="stylesheet" href="../styles/estilos.css">
+    <meta name="description" content="Fan del terror como yo? Encontrá pelis imperdibles, reseñas sinceras y un sitio tan oscuro como nuestro género favorito. Por Bela.">
+    <meta name="keywords" content="reseñas,peliculas,terror,genero,opiniones">
+    <meta name="author" content="Cristina Gomez">
 </head>
 <body>
     <header>
