--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/estilos.css">
+    <meta name="description" content="Fan del terror como yo? Encontrá pelis imperdibles, reseñas sinceras y un sitio tan oscuro como nuestro género favorito. Por Bela.">
+    <meta name="keywords" content="películas de terror, cine de terror, recomendaciones de terror, reseñas de películas, galería de cine, horror clásico, cine oscuro, sitio de terror, experiencias de terror, Bela, fans del terror">
+    <meta name="author" content="Cristina Gomez">
 </head>
 <body>
     <header>
@@ -81,33 +84,7 @@
   </button>
 </div>
 </section>
-<main>
-  <form class="formulario">
-    <div>
-      <label for="nombre">Nombre</label>
-      <input type="text" id="nombre" placeholder="Escribí tu nombre" required>
 
-      <label for="pelicula">Película Sugerida</label>
-      <input type="text" id="pelicula" placeholder="Nombre de la película" required>
-    </div>
-
-    <div>
-      <label for="motivo">¿Por qué querés que la comente?</label>
-      <textarea id="motivo" rows="5" placeholder="Contame tu motivo..." required></textarea>
-    </div>
-
-    <div class="radio-group">
-      <label>¿Ya la viste?</label>
-      <input type="radio" name="vista" id="si" value="si">
-      <label for="si">Sí</label>
-      <input type="radio" name="vista" id="no" value="no">
-      <label for="no">No</label>
-    </div>
-
-    <button type="submit">Recomendar</button>
-  </form>
-  </div>
-</main>
     <footer>
       <h2>Derechos reservados</h2>
       <div class="social-icons">
