--- a/pages/acercademi.html
+++ b/pages/acercademi.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Acerca de Mi</title>
     <link rel="stylesheet" href="../styles/estilos.css">
+    <meta name="description" content="Fan del terror como yo? Encontrá pelis imperdibles, reseñas sinceras y un sitio tan oscuro como nuestro género favorito. Por Bela.">
+    <meta name="keywords" content="Nombre,descripcion,motivo,comienzos,conoceme">
+    <meta name="author" content="Cristina Gomez">
 </head>
 <body>
     <header>
