--- a/pages/favorita2024.html
+++ b/pages/favorita2024.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Favorita 2024</title>
     <link rel="stylesheet" href="../styles/estilos.css">
+    <meta name="description" content="Fan del terror como yo? Encontrá pelis imperdibles, reseñas sinceras y un sitio tan oscuro como nuestro género favorito. Por Bela.">
+    <meta name="keywords" content="película,2024,la,elegida,mejor">
+    <meta name="author" content="Cristina Gomez">
+
 </head>
 <body>
     <header>
