--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
         <nav>
           <ul class="menu">
             <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./pages/acercademi.html">Acerca de Mi</a></li>
-            <li><a href="./pages/favorita2024.html">Favorita 2024</a></li>
-            <li><a href="./pages/recomendadas.html">Recomendadas</a></li>
-            <li><a href="./pages/reviews.html">Reviews</a></li>
-            <li><a href="./pages/contacto.html">Contacto</a></li>
+            <li><a href="../pages/acercademi.html">Acerca de Mi</a></li>
+            <li><a href="../pages/favorita2024.html">Favorita 2024</a></li>
+            <li><a href="../pages/recomendadas.html">Recomendadas</a></li>
+            <li><a href="../pages/reviews.html">Reviews</a></li>
+            <li><a href="../pages/contacto.html">Contacto</a></li>
           </ul>
         </nav>
     </header>
-
-
+    
     <section class="container">
     <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
   <div class="carousel-indicators">
